[package]
name = "flipper"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_lang = { version = "3.0", default-features = false }
ink_env = { version = "3.0", default-features = false }
parity-scale-codec = { version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink_lang/std",
    "ink_env/std",
    "parity-scale-codec/std",
    "scale-info/std",
]
